infrastructure/kgateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kgateway-system
  labels:
    name: kgateway-system
##
