infrastructure/kgateway/kgateway-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kgateway
  namespace: kgateway-system
spec:
  selector:
    app.kubernetes.io/instance: kgateway
    app.kubernetes.io/name: kgateway
  ports:
  - name: xds
    port: 9977
    protocol: TCP
    targetPort: 9977
  - name: admin
    port: 9093
    protocol: TCP
    targetPort: 9093
  - name: grpc
    port: 9092
    protocol: TCP
    targetPort: 9092
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
